// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] FFCardSimple renders correctly but with fallback image 1`] = `
<View
  style={
    Array [
      Object {},
      undefined,
      Object {
        "alignItems": "center",
        "flex": 1,
      },
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 10,
              "borderWidth": 1,
              "elevation": 5,
              "height": 255,
              "width": 182.14285714285717,
            },
            undefined,
            Object {
              "flex": 1,
            },
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_eg.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="grid-Image-1-001H"
      />
    </View>
  </View>
</View>
`;

exports[`[Component] FFCardSimple renders correctly in grid view 1`] = `
<View
  style={
    Array [
      Object {},
      undefined,
      Object {
        "alignItems": "center",
        "flex": 1,
      },
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 10,
              "borderWidth": 1,
              "elevation": 5,
              "height": 255,
              "width": 182.14285714285717,
            },
            undefined,
            Object {
              "flex": 1,
            },
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_fr.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="single-Image-1-001H"
      />
    </View>
  </View>
</View>
`;

exports[`[Component] FFCardSimple renders correctly in list view 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "marginBottom": 10,
      },
      undefined,
      Object {
        "alignItems": "center",
        "flex": 1,
      },
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 10,
              "borderWidth": 1,
              "elevation": 5,
              "height": 255,
              "width": 182.14285714285717,
            },
            undefined,
            Object {
              "flex": 1,
            },
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_fr.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="list-Image-1-001H"
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "marginLeft": 10,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          undefined,
        ]
      }
    >
      Code: 
      1-001H
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          undefined,
        ]
      }
    >
      Nom: 
      Boulou
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          undefined,
        ]
      }
    >
      Type: 
      blue
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          undefined,
        ]
      }
    >
      Element: 
      
      <Image
        source="test-file-stub"
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
            Object {},
          ]
        }
      />
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          undefined,
        ]
      }
    />
    <Text
      numberOfLines={6}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    >
      billy 
      <Image
        source="test-file-stub"
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
            Object {},
          ]
        }
      />
      
      <Text
        style={
          Array [
            Object {},
          ]
        }
      >
        ❶
      </Text>
      
      <Image
        source="test-file-stub"
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
            Object {},
          ]
        }
      />
      
    </Text>
  </View>
</View>
`;

exports[`[Component] FFCardSimple renders correctly with twice callback 1`] = `
<View
  style={
    Array [
      Object {},
      undefined,
      Object {
        "alignItems": "center",
        "flex": 1,
      },
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderRadius": 10,
              "borderWidth": 1,
              "elevation": 5,
              "height": 255,
              "width": 182.14285714285717,
            },
            undefined,
            Object {
              "flex": 1,
            },
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_eg.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="grid-Image-1-001H"
      />
    </View>
  </View>
</View>
`;
